--- a/ui/html/footer.partial.html
+++ b/ui/html/footer.partial.html
@@ -1,3 +1,3 @@
 {{define "footer"}}
-<footer>Сайт создан на <strong>Golang</strong></footer>
+<footer>Powered by <strong>Golang</strong> in {{ .CurrentYear }}</footer>
 {{end}}
