--- a/ui/html/signup.page.html
+++ b/ui/html/signup.page.html
@@ -3,7 +3,7 @@
 {{define "title"}} Signup {{end}}
 
 {{define "main"}}
-<form action="user/signup" method="post" novalidate>
+<form action="/user/signup" method="post" novalidate>
     {{with .Form}}
     <div>
         <label for="">Name:</label>
