--- a/ui/html/home.page.html
+++ b/ui/html/home.page.html
@@ -2,7 +2,7 @@
 
 {{define "title"}}Домашняя страница{{end}}
 
-{{define "main"}}
+{{define "body"}}
 <h2>Последние Заметки</h2>
 {{if .Snippets}}
 <table>
