--- a/ui/html/show.page.html
+++ b/ui/html/show.page.html
@@ -2,7 +2,7 @@
 
 {{define "title"}}Snippet #{{.Snippet.ID}}{{end}}
 
-{{define "main"}}
+{{define "body"}}
     {{with .Snippet}}
     <div class='snippet'>
         <div class='metadata'>
