--- a/ui/html/create.page.html
+++ b/ui/html/create.page.html
@@ -1,35 +1,35 @@
-{{ template "base" .}}
-{{ define "title" }}Create a New Snippet {{ end }}
+{{template "base" .}}
+{{define "title"}}Create a New Snippet {{end}}
 
-{{ define "main"}}
+{{define "body"}}
 <form action="/snippet/create" method="post">
-    {{ with .Form }}
+    {{with .Form}}
     <div>
         <label>Title:</label>
-        {{ with .Errors.Get "title" }}
+        {{with .Errors.Get "title"}}
         <label class="error">{{.}}</label>
-        {{ end }}
-        <input type="text" name="title" value='{{ .Get "title" }}'>
+        {{end}}
+        <input type="text" name="title" value='{{.Get "title"}}'>
     </div>
     <div>
-        {{ with .Errors.Get "content" }}
+        {{with .Errors.Get "content"}}
         <label class="error">{{.}}</label>
-        {{ end }}
-        <textarea name="content">{{ .Get "content" }}</textarea>
+        {{end}}
+        <textarea name="content">{{.Get "content"}}</textarea>
     </div>
     <div>
         <label>Delete in:</label>
-        {{ with .Errors.Get "expires" }}
+        {{with .Errors.Get "expires"}}
         <label class="error">{{.}}</label>
-        {{ end }}
-        {{ $exp := or (.Get "expires") "365" }}
-        <input type="radio" name="expires" value="365" {{ if (eq $exp "365" ) }} checked {{ end }}> One Year
-        <input type="radio" name="expires" value="7" {{ if (eq $exp "7" ) }} checked {{ end }}> One Week
-        <input type="radio" name="expires" value="1" {{ if (eq $exp "1" ) }} checked {{ end }}> One day
+        {{end}}
+        {{$exp := or (.Get "expires") "365"}}
+        <input type="radio" name="expires" value="365" {{if (eq $exp "365" )}} checked {{end}}> One Year
+        <input type="radio" name="expires" value="7" {{if (eq $exp "7" )}} checked {{end}}> One Week
+        <input type="radio" name="expires" value="1" {{if (eq $exp "1" )}} checked {{end}}> One day
     </div>
     <div>
         <input type="submit" value="Publish snippet">
     </div>
-    {{ end }}
+    {{end}}
 </form>
-{{ end }}
+{{end}}
